# atfirstsight-app

./: .gitignore  AtFirstSight (1).vsdx  package-lock.json
app/: app.json  package-lock.json  package.json
app/app/: _layout.tsx
app/app/(auth)/: _layout.tsx  logIn.tsx  profileCreation.tsx  signIn.tsx  signUp.tsx
app/app/(tabs)/: _layout.tsx  chats.tsx  discover.tsx  explore.tsx  index.tsx  profile.tsx
app/components/: ImageViewer.tsx
app/src/services/: authServices.tsx
app/src/store/: useUserStore.tsx
app/src/types/: user.tsx
app/types/: profile.tsx  user.tsx
backend/: pyproject.toml
backend/atfirstsight_api/: main.py  settings.py
backend/atfirstsight_api/api/: app.py  exception_handlers.py  lifespan.py
backend/atfirstsight_api/api/api_models/: chats.py  preferences.py  users.py
backend/atfirstsight_api/api/dependencies/: auth.py  db.py  storage.py  supabase.py
backend/atfirstsight_api/api/models/: profiles.py
backend/atfirstsight_api/api/routes/: chats.py  preferences.py  profiles.py  users.py
backend/atfirstsight_api/db/: approach_requests_repo.py  approaches_repo.py  chat_repo.py  db.py  exceptions.py  preferences_repo.py  profiles_repo.py
backend/atfirstsight_api/models/: approach_requests.py  chat.py  chats.py  chats_list.py  preferences.py  profiles.py  users.py
backend/atfirstsight_api/storage/: storage.py
