[project]
name = "atfirstsight-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "supabase>=2.22.4",
    "uvicorn>=0.38.0",
]
